benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_DivMod_Mul_Zeroes_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_Mul_Zeroes.rs
Time: 2025-09-15 20:15:56

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:24:89
   |
24 | fn get_bit(s: &[char], index: usize) -> int { if index < s.len() { if s[index] == '1' { 1 } else { 0 } } else { 0 } }
   |                                         ---                                             ^ expected `int`, found integer
   |                                         |
   |                                         expected `vstd::prelude::int` because of return type

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:24:100
   |
24 | fn get_bit(s: &[char], index: usize) -> int { if index < s.len() { if s[index] == '1' { 1 } else { 0 } } else { 0 } }
   |                                         --- expected `vstd::prelude::int` because of return type   ^ expected `int`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:24:113
   |
24 | fn get_bit(s: &[char], index: usize) -> int { if index < s.len() { if s[index] == '1' { 1 } else { 0 } } else { 0 } }
   |                                         --- expected `vstd::prelude::int` because of return type                ^ expected `int`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:49:35
   |
49 |         let sum = bit_a + bit_b + carry;
   |                   -------------   ^^^^^ expected `int`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:50:32
   |
50 |         let new_bit = if sum % 2 == 1 { '1' } else { '0' };
   |                          ---   ^ expected `int`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:50:37
   |
50 |         let new_bit = if sum % 2 == 1 { '1' } else { '0' };
   |                          -------    ^ expected `int`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:51:23
   |
51 |         carry = sum / 2;
   |                 ---   ^ expected `int`, found integer
   |                 |
   |                 expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:51:17
   |
37 |     let mut carry = 0;
   |                     - expected due to this value
...
51 |         carry = sum / 2;
   |                 ^^^^^^^ expected integer, found `int`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:24:89
   |
24 | fn get_bit(s: &[char], index: usize) -> int { if index < s.len() { if s[index] == '1' { 1 } else { 0 } } else { 0 } }
   |                                         ---                                             ^ expected `int`, found integer
   |                                         |
   |                                         expected `vstd::prelude::int` because of return type

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:24:100
   |
24 | fn get_bit(s: &[char], index: usize) -> int { if index < s.len() { if s[index] == '1' { 1 } else { 0 } } else { 0 } }
   |                                         --- expected `vstd::prelude::int` because of return type   ^ expected `int`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:24:113
   |
24 | fn get_bit(s: &[char], index: usize) -> int { if index < s.len() { if s[index] == '1' { 1 } else { 0 } } else { 0 } }
   |                                         --- expected `vstd::prelude::int` because of return type                ^ expected `int`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:49:35
   |
49 |         let sum = bit_a + bit_b + carry;
   |                   -------------   ^^^^^ expected `int`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:50:32
   |
50 |         let new_bit = if sum % 2 == 1 { '1' } else { '0' };
   |                          ---   ^ expected `int`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:50:37
   |
50 |         let new_bit = if sum % 2 == 1 { '1' } else { '0' };
   |                          -------    ^ expected `int`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:51:23
   |
51 |         carry = sum / 2;
   |                 ---   ^ expected `int`, found integer
   |                 |
   |                 expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Mul_Zeroes_impl.rs:51:17
   |
37 |     let mut carry = 0;
   |                     - expected due to this value
...
51 |         carry = sum / 2;
   |                 ^^^^^^^ expected integer, found `int`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
